...
            SidebarViewToolbar()
        }
        // 弹窗：因为没有单独的页面，所以采用 alert 弹窗实现
        // 绑定 @Published 属性：renamingTag布尔值、tagName、
        .alert("Rename tag", isPresented: $viewModel.renamingTag) {
            // 完成按钮：点击后执行 “completeRename”
            Button("OK", action: viewModel.completeRename)
            // 取消按钮：点击后不需要设置，它会自动关闭弹窗并让绑定值恢复
            Button("Cancel", role: .cancel) { }
            // 输入框：绑定状态属性 $tagName
            TextField("New name", text: $viewModel.tagName)
        }
        // 导航标题
        .navigationTitle("Filters")

    }




...
